@startuml
skinparam classAttributeIconSize 0
!pragma useIntermediatePackages false
class com.example.ezvault.LoginHandler {
- strategy: LoginStrategy
+ <<Create>> LoginHandler(LoginStrategy)
+ login(): Task<User>
}
class com.example.ezvault.MainActivity {
~ firebase: FirebaseBundle
# onCreate(Bundle): void
}
interface com.example.ezvault.LoginStrategy {
~ authenticateUser(): Task<User>
}
class com.example.ezvault.EmailPasswordLoginStrategy {
- email: String
- password: String
+ <<Create>> EmailPasswordLoginStrategy(FirebaseBundle,String,String)
+ authenticate(FirebaseBundle): Task<String>
}
class com.example.ezvault.FirebaseBundle {
- db: FirebaseFirestore
- auth: FirebaseAuth
+ <<Create>> FirebaseBundle()
+ <<Create>> FirebaseBundle(FirebaseFirestore,FirebaseAuth)
+ getDb(): FirebaseFirestore
+ getAuth(): FirebaseAuth
}
abstract class com.example.ezvault.FirebaseLoginStrategy {
- firebase: FirebaseBundle
+ <<Create>> FirebaseLoginStrategy(FirebaseBundle)
+ authenticateUser(): Task<User>
+ {abstract}authenticate(FirebaseBundle): Task<String>
}
together {
class com.example.ezvault.Tag {
- identifier: String
+ <<Create>> Tag(String)
+ getIdentifier(): String
+ setIdentifier(String): void
}
    class com.example.ezvault.TagDAO {
        - firebase: FirebaseBundle
        + <<Create>> TagDAO(FirebaseBundle)
    }

    class com.example.ezvault.TagCreator {
        - ident: String
        + <<Create>> TagCreator(String)
    }

    class com.example.ezvault.TagService {
    - tagDAO: TagDAO
    + tagCreator: TagCreator
    + <<Create>> TagService(TagDAO)
    }
}
together {
    class com.example.ezvault.User {
        - userName: String
        - uid: String
        + <<Create>> User(String,String)
        + getUserName(): String
        + applyUserNameUpdate(String): void
        + getUid(): String
    }
    class com.example.ezvault.UserDAO {
        - firebase: FirebaseBundle
        + <<Create>> UserDAO(FirebaseBundle)
    }
}
FirebaseLoginStrategy o-- FirebaseBundle
MainActivity o-- FirebaseBundle
TagDAO o-- FirebaseBundle
FirebaseBundle o-- UserDAO

TagService *-- TagCreator
TagService o-- TagDAO

LoginHandler *-- LoginStrategy

androidx.appcompat.app.AppCompatActivity <|-- com.example.ezvault.MainActivity
com.example.ezvault.FirebaseLoginStrategy <|-- com.example.ezvault.EmailPasswordLoginStrategy
com.example.ezvault.LoginStrategy <|.. com.example.ezvault.FirebaseLoginStrategy
@enduml